--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "discord-bot",
   "version": "1.0.0",
+  "description": "My Discord bot",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "discord.js": "^14.15.3",
-    "dotenv": "^16.4.5",
-    "fs-extra": "^11.2.0"
+    "discord.js": "^14.15.2",
+    "dotenv": "^16.4.5"
   }
 }
