--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "discord.js": "^14.15.2",
-    "dotenv": "^16.4.5"
+    "discord.js": "14.15.2",
+    "dotenv": "16.4.5",
+    "node-fetch": "2.6.7"
   }
 }
