--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "My Discord bot",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "dependencies": {
     "discord.js": "14.15.2",
     "dotenv": "16.4.5",
-    "node-fetch": "2.6.7"
+    "node-fetch": "2.6.7",
+    "express": "4.18.2"
   }
 }
